--- a/src/style/layouts/footer.css
+++ b/src/style/layouts/footer.css
@@ -11,13 +11,29 @@ footer{
     align-items: center;
     justify-content: space-between;
     z-index: 999;
+
 }
 
 footer a {
     color: var(--color-white);
     text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 70px;
+    font-size: 14px;
 }
 
 .active{
     color: var(--color-gold);
+}
+
+.active .stroke-svg{
+    stroke: var(--color-gold);
+}
+
+.active .fill-svg{
+    fill: var(--color-gold);
 }
