--- a/src/style/layouts/header.css
+++ b/src/style/layouts/header.css
@@ -1,4 +1,5 @@
 @import url(../variables/color.css);
+@import url(../variables/font.css);
 
 header{
     height: 70px;
@@ -9,4 +10,13 @@ header{
     left: 0;
     width: 100%;
     z-index: 999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1{
+    font-family: var(--font-Montserrat-Regular);
+    font-size: 24px;
 }
