--- a/src/style/layouts/footer.css
+++ b/src/style/layouts/footer.css
@@ -23,7 +23,7 @@ footer a {
     justify-content: space-around;
     width: 100%;
     height: 70px;
-    font-size: 14px;
+    font-size: var(--font-size-menu);
 }
 
 .active{
@@ -32,6 +32,7 @@ footer a {
 
 .active .stroke-svg{
     stroke: var(--color-gold);
+    fill: transparent;
 }
 
 .active .fill-svg{
