--- a/src/style/variables/font.css
+++ b/src/style/variables/font.css
@@ -57,4 +57,10 @@
     --font-Montserrat-Bold: "Montserrat-Bold", sans-serif;
     --font-Playfair-Regular: "Playfair Display", serif;
     --font-Playfair-Bold: "Playfair Display Bold", serif;
+
+    --font-size-h2: 36px;
+    --font-size-h3: 20px;
+    --font-size-paragraph: 16px;
+    --font-size-button: 18px;
+    --font-size-menu: 14px;
 }
