--- a/src/style/global.css
+++ b/src/style/global.css
@@ -68,4 +68,80 @@ input[type=button], input[type=submit], input[type=reset] {
     border-radius: 50px;
     width: 100%;
     margin-top: 10px;
+}
+
+.burger-wrap {
+    position: absolute;
+    z-index: 40;
+    transition: 300ms 700ms transform ease-in;
+    left: 1rem;
+    top: 1.5rem;
   }
+  .burger-wrap.reappearBurger {
+    opacity: 0;
+    animation: 0.5s 2s fadeAppear ease-out forwards;
+  }
+  
+  @keyframes fadeAppear {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .burger {
+    width: 30px;
+    height: 27px;
+    cursor: pointer;
+    z-index: 30;
+    transition: transform 1s ease-in;
+  }
+
+  .burger span {
+    display: block;
+    position: absolute;
+    height: 2px;
+    left: 0;
+    background: var(--color-white);
+    border-radius: 9px;
+    opacity: 1;
+    transform: rotate(0deg);
+    transition: 0.25s ease-in-out;
+  }
+
+  .burger span:nth-child(1) {
+    top: 0px;
+    width: 100%;
+  }
+  .burger span:nth-child(2) {
+    top: 10px;
+    width: 100%;
+  }
+  .burger span:nth-child(3) {
+    top: 20px;
+    width: 100%;
+  }
+  .burger.active span:nth-child(1) {
+    width: 100%;
+    top: 10px;
+    transform: rotate(135deg);
+  }
+  .burger.active span:nth-child(2) {
+    opacity: 0;
+  }
+  .burger.active span:nth-child(3) {
+    top: 10px;
+    transform: rotate(-135deg);
+  }
+
+  #overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+}
