--- a/src/style/global.css
+++ b/src/style/global.css
@@ -30,11 +30,13 @@ img{
 main{
     position: relative;
     margin-bottom: 100px;
+    min-height: calc(100vh - 150px);
 }
 
 main:not(.art){
     top: 70px;
-    margin-bottom: 170px;
+    margin-bottom: 150px;
+    background-color: var(--color-blue);
 }
 
 body{
@@ -51,7 +53,7 @@ h3{
 }
 
 .filter__search{
-    border: 1px solid var(--color-gold);
+    border: 2px solid var(--color-gold);
     height: 30px;
     border-radius: 50px;
     padding: 0 10px;
@@ -144,4 +146,8 @@ input[type=button], input[type=submit], input[type=reset] {
     right: 0;
     background: rgba(0, 0, 0, 0.7);
     transition: opacity 500ms;
+}
+
+details{
+  margin: 1.5rem 0;
 }
