--- a/src/style/art.css
+++ b/src/style/art.css
@@ -32,8 +32,7 @@
 
 .art__presentation_img{
     height: calc(100vh - 80px);
-    object-fit: cover;
-    transform: none !important;
+    object-fit: contain;
 }
 
 .art__presentation_info{
